@@ -364,7 +364,7 @@ if ENABLE_PCX
 	$(FIM_EXE) $(FIMNORCOPTS) -o dumb $(top_srcdir)/media/special/0_8bit.pcx.bin -C 'stdout "Unsupported PCX file test.."' -c 'quit !(i:width==0)' # named so to not break dir-loading tests
 endif
 if ENABLE_PCX
-	$(FIM_EXE) $(FIMNORCOPTS) -o dumb $(top_srcdir)/media/numbers_pcx/*.pcx --load-image-descriptions-file media/special/modifiers.desc -c '/0.pcx; quit !(i:_comment=="comments")'
+	$(FIM_EXE) $(FIMNORCOPTS) -o dumb $(top_srcdir)/media/numbers_pcx/*.pcx --load-image-descriptions-file media/special/modifiers.desc -c '/0.pcx; quit !(i:_comment=="comments"&&i:T==""&&common=="s")'
 	$(FIM_EXE) $(FIMNORCOPTS) -o dumb $(top_srcdir)/media/numbers_pcx/*.pcx --load-image-descriptions-file media/special/modifiers.desc -c '/1.pcx; quit !(i:_comment=="pre_comments")'
 	$(FIM_EXE) $(FIMNORCOPTS) -o dumb $(top_srcdir)/media/numbers_pcx/*.pcx --load-image-descriptions-file media/special/modifiers.desc -c '/2.pcx; quit !(i:_comment=="comment")'
 	$(FIM_EXE) $(FIMNORCOPTS) -o dumb $(top_srcdir)/media/numbers_pcx/*.pcx --load-image-descriptions-file media/special/modifiers.desc -c '/3.pcx; quit !(i:_comment=="comment_post")'
