@@ -164,7 +164,7 @@ Execute any command bound (via the bind command) to a specified keysym at startu
 Input one or more keyboard characters at program startup (simulate keyboard presses). This option can be specified multiple times. Each additional time (or if the string is empty), a press of Enter (ASCII code 0x0D) key is prepended. Examples: -K '' simulates press of an Enter;  -K ':next;' activates the command line and enter "next;" without executing it;  -K ":next;" -K "next" executes "next", stays in the command line and enter keys "next";  -K ":next;" -K "" -K "next" executes "next", leaves the command line, and executes in sequence any command bound to keys 'n', 'e', 'x', 't'. Presses entered via \fB--chars-press\fP are processed after presses entered via \fB--keysym-press\fP. 
 .TP
 \fB-D \fR\fI{filename}\fR\fP, \fB--load-image-descriptions-file \fR\fI{filename}\fR\fP
-Load image descriptions from file \fR\fI{filename}\fR. Each line begins with the basename of an image file, followed by a Tab character (or a different character if specified via \fB--image-descriptions-file-separator\fP), then the description text. The description text is copied into the \fBi:_comment\fP variable of the image at load time, overriding the comment possibly loaded from the file (e.g. JPEG, PNG or TIFF comment). If a '@' followed by and identifier \fR\fI{var}\fR is encountered, and i:\fR\fI{var}\fR is set, its value is substituted here. If "@#" is encountered, the remainder of the description line is ignored. Special comment lines like "#!fim:\fR\fI{var}\fR=\fR\fI{val}\fR" lead i:\fR\fI{var}\fR to be assigned value \fR\fI{val}\fR (unquoted) at image loading time (cached variable), unless \fR\fI{var}\fR starts with an underscore ('_'). Special comment lines like "#!fim:+=\fR\fI{val}\fR" add \fR\fI{val}\fR to current description. Special comment lines like "#!fim:^=\fR\fI{val}\fR" set \fR\fI{val}\fR to be the base of each description. Special comment lines like "#!fim:!=" reset all cached variables. Special comment lines like "#!fim:/=\fR\fI{dir}\fR" prepend \fR\fI{dir}\fR to each file's basename. Special comment lines like "#!fim:\e=\fR\fI{dir}\fR" prepend \fR\fI{dir}\fR to each file's name. Special description text (to be associated to an image) begins with markers:  with "#!fim:=", the last description line is reused; with "#!fim:+", what follows is appended to the last description line; with "#!fim:^", what follows is prepended to the last description line; with "#!fim:s/\fR\fI{f}\fR/\fR\fI{t}\fR", the last description line is used and substituted substring \fR\fI{t}\fR to occurrences of substring \fR\fI{f}\fR (\fR\fI{f}\fR and \fR\fI{t}\fR cannot contain newlines or a '/'). If \fR\fI{val}\fR is empty that variable is unset. These variables are stored also in an internal index used by the limit command. This option sets \fB_caption_over_image\fP=2, so that a caption is displayed over the image. A description file beginning with "#!fim:desc" can be loaded without specifying this switch.
+Load image descriptions from file \fR\fI{filename}\fR. Each line begins with the basename of an image file, followed by a Tab character (or a different character if specified via \fB--image-descriptions-file-separator\fP), then the description text. The description text is copied into the \fBi:_comment\fP variable of the image at load time, overriding the comment possibly loaded from the file (e.g. JPEG, PNG or TIFF comment). If a '@' followed by an identifier \fR\fI{var}\fR is encountered, and i:\fR\fI{var}\fR is set, its value is substituted here. If "@#" is encountered, the remainder of the description line is ignored. Special comment lines like "#!fim:\fR\fI{var}\fR=\fR\fI{val}\fR" lead i:\fR\fI{var}\fR to be assigned value \fR\fI{val}\fR (unquoted) at image loading time (cached variable), unless \fR\fI{var}\fR starts with an underscore ('_'). Special comment lines like "#!fim:@\fR\fI{var}\fR=\fR\fI{val}\fR" create a variable\fR\fI{var}\fR that are only valid in expanding @\fR\fI{var}\fR in comments. If \fR\fI{var}\fR starts with "@", that . Special comment lines like "#!fim:+=\fR\fI{val}\fR" add \fR\fI{val}\fR to current description. Special comment lines like "#!fim:^=\fR\fI{val}\fR" set \fR\fI{val}\fR to be the base of each description. Special comment lines like "#!fim:!=" reset all cached variables. Special comment lines like "#!fim:/=\fR\fI{dir}\fR" prepend \fR\fI{dir}\fR to each file's basename. Special comment lines like "#!fim:\e=\fR\fI{dir}\fR" prepend \fR\fI{dir}\fR to each file's name. Special description text (to be associated to an image) begins with markers:  with "#!fim:=", the last description line is reused; with "#!fim:+", what follows is appended to the last description line; with "#!fim:^", what follows is prepended to the last description line; with "#!fim:s/\fR\fI{f}\fR/\fR\fI{t}\fR", the last description line is used and substituted substring \fR\fI{t}\fR to occurrences of substring \fR\fI{f}\fR (\fR\fI{f}\fR and \fR\fI{t}\fR cannot contain newlines or a '/'). If \fR\fI{val}\fR is empty that variable is unset. These variables are stored also in an internal index used by the limit command. This option sets \fB_caption_over_image\fP=2, so that a caption is displayed over the image. A description file beginning with "#!fim:desc" can be loaded without specifying this switch.
 .TP
 \fB-S \fR\fI{sepchar}\fR\fP, \fB--image-descriptions-file-separator \fR\fI{sepchar}\fR\fP
 A character to be used as a separator between the filename and the description part of lines specified just before a --load-image-descriptions-file.
