@@ -1584,7 +1584,7 @@ Part of the default configuration comes from the \fB_fim_default_config_file_con
 One can skip its loading by using the \fB_no_default_configuration\fP variable.
 
 .nf
-# $LastChangedDate: 2024-02-07 02:02:29 +0100 (Wed, 07 Feb 2024) $
+# $LastChangedDate: 2024-02-07 09:29:46 +0100 (Wed, 07 Feb 2024) $
 # Contents of the default 'fimrc' file, hardcoded in the fim executable.
 # Read the documentation (man fimrc) to discover how to change this default hardcoded file and how to make your own.
 # Note that usually a ~/.fimrc file is read after these options take effect, so you could reset all of this with ease.
