@@ -3,7 +3,8 @@
 # TODO: missing test for \=
 #!fim:\=
 #!fim:common=s
-0.pcx	comment@common
+#!fim:@T=t
+0.pcx	commen@T@common
 1.pcx	#!fim:^pre_
 2.pcx	comment
 3.pcx	#!fim:+_post
